# noframe

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  vimrc
noframe_derive/: Cargo.toml
noframe_derive/src/: lib.rs  mask_derive.rs
noframe_derive/tests/: derive_mask_test.rs
src/: camera.rs  color.rs  deltatime.rs  lib.rs  settings.rs
src/entity/: mod.rs  prelude.rs  velocity.rs
src/entity/traits/: mod.rs  movement.rs  velocity.rs
src/geo/: base_vector_point.rs  mod.rs  prelude.rs
src/geo/conversions/: mod.rs  tests.rs
src/geo/invert/: mod.rs  tests.rs
src/geo/mask/: misc.rs  mod.rs  origin.rs  sides.rs  tests.rs
src/geo/point/: mod.rs  tests.rs
src/geo/rect/: mod.rs
src/geo/size/: mod.rs  tests.rs
src/input_manager/: mod.rs  tests.rs
