[package]
name = "noframe"
version = "0.0.8-ggez0.5"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
description = "Game development framework using crate ggez."
license = "MIT"
repository = "https://github.com/Noah2610/noframe"
readme = "README.md"

[dependencies]
num-traits = "0.2"
ggez = { git = "https://github.com/ggez/ggez" }
